--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,10 +11,12 @@
         android:weightSum="1.0"
         android:layout_weight=".20">
         <EditText
+            android:id="@+id/addressText"
             android:layout_width="0dp"
             android:layout_weight="0.85"
             android:layout_height="wrap_content" />
         <Button
+            android:onClick="searchAddress"
             android:text="Buscar"
             android:textAlignment="center"
             android:layout_width="0dp"
