--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -2,45 +2,44 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:weightSum="1.0"
+    android:animateLayoutChanges="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1.0"
-        android:layout_weight=".20">
-        <EditText
-            android:id="@+id/addressText"
-            android:layout_width="0dp"
-            android:layout_weight="0.85"
-            android:layout_height="wrap_content" />
-        <Button
-            android:onClick="searchAddress"
-            android:text="Buscar"
-            android:textAlignment="center"
-            android:layout_width="0dp"
-            android:layout_weight="0.15"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.8"
-        android:weightSum="1.0"
-        android:orientation="horizontal" >
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight=".20">
-
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/map" tools:context=".Map"
-            android:name="com.google.android.gms.maps.SupportMapFragment" />
-        </LinearLayout>
-    </LinearLayout>
+                android:gravity="center_horizontal" android:name="com.google.android.gms.maps.SupportMapFragment">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_horizontal"
+                    android:weightSum="1.0"
+                    xmlns:android="http://schemas.android.com/apk/res/android">
+                    <EditText
+                        android:id="@+id/addressText"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.70"
+                        android:layout_marginTop="10dp"
+                        android:visibility="gone"
+                        android:layout_height="wrap_content" />
+                    <Button
+                        android:layout_width="0dp"
+                        android:layout_weight="0.10"
+                        android:layout_height="wrap_content"
+                        android:onClick="searchAddress"
+                        android:id="@+id/searchButton"
+                        android:visibility="gone"
+                        android:text="Buscar"
+                        android:layout_marginTop="10dp"/>
+                </LinearLayout>
 
+                <Button
+                    android:id="@+id/showButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="show"
+                    android:text="Mostrar"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginTop="10dp"/>
+            </fragment>
 </LinearLayout>
