--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -3,43 +3,30 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:animateLayoutChanges="true"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/map" tools:context=".Map"
                 android:gravity="center_horizontal" android:name="com.google.android.gms.maps.SupportMapFragment">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal"
-                    android:weightSum="1.0"
-                    xmlns:android="http://schemas.android.com/apk/res/android">
-                    <EditText
+                <EditText
                         android:id="@+id/addressText"
-                        android:layout_width="0dp"
-                        android:layout_weight="0.70"
+                        android:layout_width="400dp"
                         android:layout_marginTop="10dp"
                         android:visibility="gone"
+                        android:layout_gravity="top|center_horizontal"
                         android:layout_height="wrap_content" />
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_weight="0.10"
-                        android:layout_height="wrap_content"
-                        android:onClick="searchAddress"
-                        android:id="@+id/searchButton"
-                        android:visibility="gone"
-                        android:text="Buscar"
-                        android:layout_marginTop="10dp"/>
-                </LinearLayout>
 
-                <Button
+                <com.getbase.floatingactionbutton.FloatingActionButton
                     android:id="@+id/showButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="show"
-                    android:text="Mostrar"
+                    fab:fab_icon="@drawable/ic_search"
+                    fab:fab_colorNormal="#ffa500"
+                    fab:fab_colorPressed="#dd8300"
                     android:layout_gravity="bottom|center_horizontal"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="10dp"/>
             </fragment>
 </LinearLayout>
