--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -9,14 +9,35 @@
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/map" tools:context=".Map"
                 android:gravity="center_horizontal" android:name="com.google.android.gms.maps.SupportMapFragment">
-                <EditText
-                        android:id="@+id/addressText"
-                        android:layout_width="400dp"
-                        android:layout_marginTop="10dp"
-                        android:visibility="gone"
-                        android:layout_gravity="top|center_horizontal"
-                        android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:animateLayoutChanges="true"
+                    android:gravity="center_horizontal|center_vertical" android:weightSum="1.0" >
+                    <EditText
+                            android:id="@+id/addressText"
+                            android:gravity="center"
+                            android:ellipsize="end"
+                            android:background="@drawable/rounded_corners_edittext"
+                            android:hint="Where would you like to go?"
+                            android:visibility="gone"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.7"
+                            android:layout_height="wrap_content" />
 
+                    <com.getbase.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/searchButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:layout_gravity="bottom|start"
+                        android:layout_marginTop="10dp"
+                        fab:fab_icon="@drawable/ic_play_light"
+                        fab:fab_colorNormal="#ffa500"
+                        fab:fab_colorPressed="#dd8300"
+                        fab:fab_size="mini"/>
+                </LinearLayout>
                 <com.getbase.floatingactionbutton.FloatingActionButton
                     android:id="@+id/showButton"
                     android:layout_width="wrap_content"
